@@ -55,6 +55,7 @@
 (srfi 206)
 (srfi 211 er-macro-transformer)
 (srfi 211 identifier-syntax)
+(srfi 211 ir-macro-transformer)
 (srfi 211 syntax-case)
 (srfi 211 syntax-parameter)
 (srfi 211 variable-transformer)
