@@ -2,6 +2,12 @@ Unsyntax NEWS
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** New features
+
+*** ER- and IR Macros
+
+  The SRFI 211 implementation now also supports explicitly and
+  implicitly renaming macro transformers.
 
 * Noteworthy changes in release 0.0.2 (2020-09-24) [alpha]
 
@@ -19,7 +25,11 @@ Unsyntax NEWS
   SRFI 188 (Splicing binding constructs for syntactic keywords) is now
   supported.
 
+*** SRFI 206
+
   SRFI 206 (Auxiliary Syntax Keywords) is now supported.
+
+*** SRFI 212
 
   SRFI 212 (Aliases) is now supported.
 
